fix on mobile

--- a/siteTemplate/css/style.css
+++ b/siteTemplate/css/style.css
@@ -18,7 +18,7 @@ h1 {
     top: 20%;
     left: 10%; }
   aa-banner h1:nth-child(3) {
-    top: 23%;
+    top: 25%;
     left: 10%; } }
 
 @media (min-width: 768px) {
